@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3121 2019/07/31 13:45:24 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3122 2019/07/31 13:47:23 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5078,3 +5078,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added textproc/R-cellranger version 1.1.0 [brook 2019-07-31]
 	Added textproc/R-data.table version 1.12.2 [brook 2019-07-31]
 	Added textproc/R-haven version 2.1.1 [brook 2019-07-31]
+	Added textproc/R-htmlTable version 1.13.1 [brook 2019-07-31]
